# dummy-player

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/dummy-player/: CMakeLists.txt  main.cpp  make_command_dispatcher.cpp  make_command_dispatcher.hpp
app/dummy-player/commands/: types.hpp
app/dummy-player/music_types/: player_info.hpp  player_status.hpp  playlist.hpp  track_metadata.cpp  track_metadata.hpp
app/dummy-player/threads/: command_dispatcher_thread.cpp  command_dispatcher_thread.hpp  states.hpp  status_thread.cpp  status_thread.hpp  streamer_thread.cpp  streamer_thread.hpp  threads.hpp  user_input_thread.cpp  user_input_thread.hpp
data/megadeth/: 01_HolyWars.music  02_TornadoOfSouls.music
lib/: CMakeLists.txt
lib/ds/: CMakeLists.txt
lib/ds/datastruct/: cache.hpp
lib/ds/meta/: function.hpp  nth_element.hpp
lib/ds/thread/: safe_thread.hpp  shared_state.hpp
lib/ds/utils/: forward_macro.hpp  make_iterator_vector.hpp  make_ref_wrapper_vector.hpp
lib/dummy-player/: CMakeLists.txt
lib/dummy-player/commands/: command.hpp  command_dispatcher.hpp  type_conversion.hpp  type_conversion_fwd.hpp
lib/dummy-player/model/: access.hpp  add_track.hpp  info.hpp  music_cache.hpp  playlist_shuffle.hpp  remove_track.hpp  repeat_mode.hpp  set_track.hpp  shuffle_mode.hpp  track_navigation.hpp  track_navigation_fwd.hpp  unique.hpp
lib/dummy-player/thread/: shared_state.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_command.cpp  test_music_cache.cpp
thirdparties/: CMakeLists.txt
